# vuln-checker

./: LICENSE  MANIFEST.in  README.md  products.csv  pyproject.toml  template.html
vuln_checker/: cpes_list.txt  main.py  requirements.txt
vuln_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vuln_checker/templates/: template.html
